[package]
name = "telemon"
version = "0.1.1"
edition = "2024"
authors = ["Abduqodir Xojiyev"]
description = "A Telegram bot for sending log messages to group topics."
license = "MIT"
repository = "https://github.com/encoderuz/telemon"
readme = "README.md"
keywords = ["telegram", "log", "bot", "topic", "notification"]
categories = ["development-tools::cargo-plugins","development-tools"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
once_cell = "1.19"
reqwest = { version = "0.12.15", features = ["json", "blocking", "rustls-tls"] }
